--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@thumbmarkjs/thumbmarkjs",
-  "version": "1.3.2",
-  "description": "",
+  "name": "markplus",
+  "version": "1.0.0",
+  "description": "Browser fingerprinting library - fork of ThumbmarkJS",
   "type": "module",
   "main": "./dist/thumbmark.cjs.js",
   "module": "./dist/thumbmark.esm.js",
@@ -36,7 +36,7 @@
     "visitor-identifier",
     "fraud-detection"
   ],
-  "author": "Ilkka Peltola",
+  "author": "Fork of ThumbmarkJS by Ilkka Peltola",
   "license": "MIT",
   "unpkg": "dist/thumbmark.umd.js",
   "devDependencies": {
